# album-maker

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP_CREDENTIALS.md  app.py  debug_db.py  docker-compose.yml  generate_sample_images.py  main.py  manual_test_blur_filtering.py  manual_test_graph_duplicates.py  print_images.py  pyproject.toml  pytest.ini  verify_exif.py
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
.specify/memory/: constitution.md
infrastructure/: main.bicep  parameters.json
src/: app_insights.py  clustering.py  database.py  duplicate_detection.py  error_handling.py  graph_duplicates.py  image_processing.py  models.py
tests/: test_clustering.py  test_duplicate_detection.py  test_graph_duplicates.py
